[project]
name = "onramp-dashboard"
version = "0.1.0"
description = "Web dashboard for OnRamp homelab management"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.0",
    "docker>=7.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
