[project]
name = "onramp-dashboard"
version = "0.1.0"
description = "Web dashboard for OnRamp homelab management"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.0",
    "docker>=7.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = ["-v", "--tb=short"]
